@@ -48,7 +48,6 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@sentry/react-native": "^4.1.0",
-    "@shopify/flash-list": "^1.2.0",
     "axios": "^0.27.1",
     "common-tags": "^1.8.2",
     "countries-list": "^2.6.1",
